# Rust-conky

./: .bash_history  Cargo.toml  README.md  config.toml  conky.sh  description.txt
src/: gui.rs  main.rs
src/config/: mod.rs
src/data/: collectors.rs  mod.rs
src/render/: mod.rs  simple.rs  tui.rs
src/widgets/: mod.rs  system.rs
