[package]
name = "rust-conky"
version = "0.1.0"
edition = "2021"
description = "A system monitor written in Rust, inspired by Conky"
authors = ["RolH1992 <rjh2991@proton.me:w>"]
license = "MIT"
repository = "https://github.com/RolH1992/Rust-conky"
readme = "README.md"
keywords = ["system", "monitor", "conky", "cli", "gui"]
categories = ["command-line-utilities", "system", "gui"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
sysinfo = "0.37.2"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
crossterm = "0.29.0"

# GUI dependencies
eframe = "0.33.2"  # egui framework
egui = "0.33.2"
