[package]
name = "rust-conky"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.29.0"
sysinfo = "0.37.2"
tokio = { version = "1.0", features = ["full"] }
toml = "0.9.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
